Update navbar styling to prevent overflow when undersizing

--- a/client/src/colors.css
+++ b/client/src/colors.css
@@ -1,7 +1,7 @@
 :root {
   --white: #f7f7f7 !important;
   --primary: #008376 !important;
-  --primary-dark: #00685e !important;
+  --primary-dark: #00756a !important;
   --dark: #101834 !important;
   --dark-light: #9b9b9b !important;
   --dark-lighter: #ededf0 !important;
